--- a/service-product-stock/package.json
+++ b/service-product-stock/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@tanstack/react-query": "^5.60.6",
 		"clsx": "^2.1.1",
 		"next": "15.0.3",
 		"react": "19.0.0-rc-66855b96-20241106",
