Removed shared as a package
Distributed shared/package.json over to services' package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
 	"private": true,
 	"workspaces": [
 		"service-product-log",
-		"service-product-stock",
-		"shared"
+		"service-product-stock"
 	]
 }
