--- a/service-product-log/package.json
+++ b/service-product-log/package.json
@@ -6,12 +6,16 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"prisma": "prisma generate && prisma db push",
+		"fmt": "prisma format && deno fmt --indent-width 4 --no-semicolons --use-tabs --ignore=*/node_modules,*/.next"
 	},
 	"dependencies": {
 		"react": "19.0.0-rc-66855b96-20241106",
 		"react-dom": "19.0.0-rc-66855b96-20241106",
-		"next": "15.0.3"
+		"next": "15.0.3",
+		"@prisma/client": "^5.22.0",
+		"prisma": "^5.22.0"
 	},
 	"devDependencies": {
 		"postcss": "^8",
