--- a/service-product-stock/package.json
+++ b/service-product-stock/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@prisma/client": "^5.22.0",
 		"@tanstack/react-query": "^5.60.6",
+		"@uidotdev/usehooks": "^2.4.1",
 		"clsx": "^2.1.1",
 		"next": "15.0.3",
 		"prisma": "^5.22.0",
