--- a/service-product-log/package.json
+++ b/service-product-log/package.json
@@ -18,6 +18,8 @@
 		"@mui/icons-material": "^6.1.8",
 		"@mui/material": "^6.1.8",
 		"@mui/material-nextjs": "^6.1.8",
+		"@mui/system": "^6.1.8",
+		"@mui/x-date-pickers": "^7.22.3",
 		"@prisma/client": "^5.22.0",
 		"@tanstack/react-query": "^5.61.0",
 		"next": "15.0.3",
