--- a/service-product-log/package.json
+++ b/service-product-log/package.json
@@ -22,6 +22,7 @@
 		"@mui/x-date-pickers": "^7.22.3",
 		"@prisma/client": "^5.22.0",
 		"@tanstack/react-query": "^5.61.0",
+		"dayjs": "^1.11.13",
 		"next": "15.0.3",
 		"prisma": "^5.22.0",
 		"react": "19.0.0-rc-66855b96-20241106",
